# bayesian-hierarchical-beta-diversity-modelling

./: CONTRIBUTING.md  README.md  README.rst  ROADMAP.md  demo.ipynb  environment.yml  mambaf0n6d4gni9q
demo_data/: day105.npz
spgdmm/: README.md  pyproject.toml
spgdmm/src/spgdmm/: __init__.py  _base.py  model.py  plotting.py
