[project]
name = "spgdmm"
version = "0.1.0"
description = "Spatial Generalised Dissimilarity Mixed Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymc>=5.0",
    "arviz>=0.17",
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=2023",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "scikit-image>=0.21",
    "matplotlib>=3.7",
    "dms-variants>=0.8",
    "ISLP>=0.3",
    "json-tricks>=3.16",
    "properscoring>=0.1",
    "nutpie>=0.10",
]

[tool.poetry]
packages = [{include = "spgdmm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
